--- a/package.json
+++ b/package.json
@@ -44,9 +44,6 @@
     ]
   },
   "devDependencies": {
-    "@redux-devtools/core": "^3.13.1",
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.17",
-    "tailwindcss": "^3.1.8"
+    "@redux-devtools/core": "^3.13.1"
   }
 }
